[project]
name = "New-folder"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "brizqu27", email = "brizqu@gmail.com"},
]
dependencies = ["streamlit>=1.41.1", "joblib>=1.4.2", "scikit-learn>=1.6.0", "torch>=2.5.1", "torchvision>=0.20.1"]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start_app = "streamlit run ./src/app.py"
start = "streamlit run ./src/test.py"
